--- a/picky-server/Cargo.toml
+++ b/picky-server/Cargo.toml
@@ -15,7 +15,7 @@ picky = { version = "4.5", default-features = false, features = ["x509", "jose",
 picky-asn1 = { version = "0.2", path = "../picky-asn1" }
 mongodb = { package = "mongodb_cwal", version = "0.6", features = ["ssl"] }
 clap = { features = ["yaml"], version = "2.32" }
-saphir = { version = "0.9", default-features = false }
+saphir = { git = "https://github.com/richerarc/saphir", branch = "2.0.0-alpha" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
@@ -31,10 +31,10 @@ hex = "0.3"
 snafu = "0.6"
 unicase = "2.6"
 rand = { version = "0.7", optional = true }
+tokio = "0.2"
 
 [dev-dependencies]
 rand = "0.7"
-http = "0.1"
 
 [features]
 pre-gen-pk = ["rand"]
