--- a/picky-server/Cargo.toml
+++ b/picky-server/Cargo.toml
@@ -15,7 +15,7 @@ picky = { version = "4.5", default-features = false, features = ["x509", "jose",
 picky-asn1 = { version = "0.2", path = "../picky-asn1" }
 mongodb = { package = "mongodb_cwal", version = "0.6", features = ["ssl"] }
 clap = { features = ["yaml"], version = "2.32" }
-saphir = { git = "https://github.com/richerarc/saphir", branch = "2.0.0-alpha" }
+saphir = "2.0.0-alpha"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
